# Hert

./: .clang-tidy  .kateproject.build  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/prompts/: hertpromote.prompt.md
.github/workflows/: ci.yml  test-reports.yml
cmake/: dev-mode.cmake  docs.cmake  enable-ccache.cmake  file-collector.cmake  generate_html_report.py.in  generate_unified_html_report.py.in  install-config.cmake  install-rules.cmake  test-reports-config.cmake  test-reports.cmake  variables.cmake
docs/: Doxyfile.in  TEST_REPORTS.md  UNIFIED_TEST_REPORTS.md
example/: CMakeLists.txt
example/HelloHert/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
include/Hert/: Hert.hpp  HertApplication.hpp  HertDaemon.hpp  HertDump.hpp  HertLog.hpp  HertSingleton.hpp  HertVersion.h.in
scripts/: demo_test_reports.sh  generate_test_reports.sh
source/: Hert.cpp  HertApplication.cpp  HertAppliction.cpp  HertDaemon.cpp  HertDump.cpp  HertLog.cpp
test/: CMakeLists.txt
test/source/: HertApplication_test.cpp  HertDump_test.cpp  HertLog_test.cpp  Hert_test.cpp
